# osh

./: .gitignore  .pre-commit-config.yaml  DEVELOP.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: pre-commit.yml
docs/: odoo-sh-backup-howto.md  rebuild-design.md  restore-design.md
osh/: __init__.py  __main__.py  backends.py  backup_sources.py  cache.py  cli.py  common.py  commons.py  config.py  db.py  diagnostics.py  echo.py  neutralize.py  odoo_layout.py  plugin_loader.py  restore.py  sources.py  userconfig.py  utils.py  verbosity.py  version.py
osh/commands/: __init__.py  backup_cmd.py  backup_sources.py  config_cmd.py  doctor_cmd.py  helpers.py  info.py  init_cmd.py  odoo_cmd.py  plug_cmd.py  restore.py  restore_cmd.py  run_cmd.py  shell.py  status_cmd.py  venv_cmd.py  version_cmd.py
osh/plugins/: __init__.py
osh/plugins/osh_backup/: __init__.py  cache.py  commands.py  sources.py  utils.py
osh/plugins/osh_docker/: __init__.py  backends.py  commands.py  utils.py
osh/plugins/osh_init_local/: __init__.py  backends.py
osh/plugins/osh_local/: __init__.py  backends.py  commands.py  utils.py
osh/plugins/osh_prune/: __init__.py  commands.py
osh/plugins/osh_rebuild/: __init__.py  commands.py  neutralize.py  restore.py
osh/plugins/osh_restore/: __init__.py  commands.py  neutralize.py  (+1 more)
osh/utils/: cache.py  odoo_layout.py  plugin_loader.py  version.py
tests/: __init__.py  conftest.py  test_backup_plugin.py  test_docker_plugin.py  test_doctor.py  test_init.py  test_odoo_cmd.py  test_plugin_collision.py  test_prune_plugin.py  test_rebuild_plugin.py  test_restore_plugin.py  test_run.py  test_venv_cmd.py
(+5 files in other folders)
