[project]
name = "osh"
version = "0.1.0"
description = "Odoo Shell command-line interface"
authors = [
    {name = "Odoo Community Association", email="info@odoo-community.org"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    # Uncomment the following line when you are ready to connect to an actual server
    # "odoorpc>=0.12",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.0",
]

[project.scripts]
osh = "osh.cli:main"

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
osh = ["plugins/osh_rebuild/data/*.sql"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = ["E501"]  # line length handled by black
